# bsd-socket-chat-app

./: README.MD
client/: chatHandler.cpp  client  client.cpp  client.pro  dataHandler.cpp  dataHandler.h  loginHandler.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  structures.h  usersHandler.cpp  usersHandler.h
server/: CMakeLists.txt  chat.db  handleDB.cpp  handlePacket.cpp  server  server.cpp  server.h  structures.h
